--- a/src/components/Courses/Courses.css
+++ b/src/components/Courses/Courses.css
@@ -25,3 +25,10 @@
         align-items: center;
     }
 }
+
+.header-section {
+    height: 150px;
+    background-color: #0093E9;
+    background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+
+}
